glue/codegen/src/snapshots/codegen__codegen_go__tests__anonymous_struct.snap
---
source: codegen/src/codegen_go.rs
expression: gen_go(src)
---
package glue

type User struct {
	Profile UserProfile `json:"profile"`
}

type UserProfile struct {
	Bio      string                              `json:"bio"`
	Age      *int                                `json:"age,omitempty"`
	Settings map[string]UserProfileSettingsValue `json:"settings"`
}

type UserProfileSettingsValue struct {
	Enabled bool `json:"enabled"`
}
