glue/codegen/src/snapshots/codegen__codegen_go__tests__array_types.snap
---
source: codegen/src/codegen_go.rs
expression: gen_go(src)
---
package glue

type User struct {
	Tags      []string  `json:"tags"`                // List of tags
	Scores    []int     `json:"scores"`              // List of scores
	Addresses []Address `json:"addresses"`           // List of addresses
	Nicknames *[]string `json:"nicknames,omitempty"` // Optional list of nicknames
}

type Address struct {
	Street string `json:"street"`
	City   string `json:"city"`
}
