glue/codegen/src/snapshots/codegen__codegen_go__tests__enum.snap
---
source: codegen/src/codegen_go.rs
expression: gen_go(src)
---
package glue

// Status User status enum
type Status string

const (
	StatusActive Status = "active"
	StatusInactive = "inactive"
	StatusPending = "pending"
)
