glue/codegen/src/snapshots/codegen__codegen_go__tests__field_alias.snap
---
source: codegen/src/codegen_go.rs
expression: gen_go(src)
---
package models

type Item struct {
	Id string `json:"item_id"`
	Name string `json:"display_name"`
}
