glue/codegen/src/snapshots/codegen__codegen_go__tests__model_reference.snap
---
source: codegen/src/codegen_go.rs
expression: gen_go(src)
---
package glue

type Order struct {
	Id    string `json:"id"`
	User  User   `json:"user"`
	Items Item   `json:"items"`
}

type User struct {
	Name string `json:"name"`
}

type Item struct {
	Sku      string `json:"sku"`
	Quantity int    `json:"quantity"`
}
