glue/codegen/src/snapshots/codegen__codegen_go__tests__model_with_optional_fields.snap
---
source: codegen/src/codegen_go.rs
expression: gen_go(src)
---
package glue

type Config struct {
	Name        string  `json:"name"`                  // Required field
	Description *string `json:"description,omitempty"` // Optional description
	Count       *int    `json:"count,omitempty"`       // Optional count
}
