glue/codegen/src/snapshots/codegen__codegen_go__tests__nested_model.snap
---
source: codegen/src/codegen_go.rs
expression: gen_go(src)
---
package glue

type Parent struct {
	Name  string      `json:"name"`
	Child ParentChild `json:"child"`
}

type ParentChild struct {
	Value int `json:"value"`
}
