glue/codegen/src/snapshots/codegen__codegen_go__tests__record_type.snap
---
source: codegen/src/codegen_go.rs
expression: gen_go(src)
---
package glue

type Data struct {
	Metadata map[string]interface{} `json:"metadata"` // A map of string to any
	Counts   map[string]int         `json:"counts"`   // A map of string to int
}
