glue/codegen/src/snapshots/codegen__codegen_go__tests__simple_model.snap
---
source: codegen/src/codegen_go.rs
expression: gen_go(src)
---
package glue

// User A simple user model
type User struct {
	Id   string `json:"id"`   // User's unique identifier
	Name string `json:"name"` // User's display name
	Age  int    `json:"age"`  // User's age
}
